Reformat code II